--- a/README
+++ b/README
@@ -1,2 +1,8 @@
+== Description
 Based on Small Area Estimation available from http://www.ccsr.ac.uk/esds/data/
 Uses sinatra web service and taverna server along with R to produce estimates of population sizes for various disabilities up to 2031.
+
+== Author
+Ian Dunlop
+
+(c) The University of Manchester 2012. Available under the new BSD licence.
