user taverna server 2.4 or higher

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Based on Small Area Estimation available from http://www.ccsr.ac.uk/esds/data/
 Uses sinatra web service and taverna server along with R to produce estimates of population sizes for various disabilities up to 2031.
 
 == Setup
-You will have to download taverna server from http://www.taverna.org.uk/download/server/ and set it up.  Make sure the path is set up correctly in the config.yaml file.  Install R and Rserve.  Install the doBy library in R.  Start up Rserve.
+You will have to download taverna server from http://www.taverna.org.uk/download/server/ and set it up.  Use taverna server v2.4 (or higher). Make sure the parameters are set up correctly in the config.yaml file.  Install R and Rserve.  Install the doBy library in R.  Start up Rserve. Uses taverna server v2.4 (or higher)
 
 == Use
 Has a simple REST based interface for creating results.  Send a get to base_url/area/year/disability where area, year and disability are chosen by you and wait for the response.
